--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <!-- Bootstrap CSS via CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <title>Todo App</title>
+    <title>Agenda de Tarefas</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
